<resources>
    <string name="app_name">Smart Virtual ID</string>
    <string name="civil_authority">Civil Authority</string>
    <string name="login_as_organization">Login as Organization</string>
    <string name="login_with_id">Login with Id</string>
    <string name="admin_activity_title">Civil Authority Admin</string>
    <string name="add_persion_title">Add New Person</string>
    <string name="name">Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="nationality">Nationality</string>
    <string name="civil_id">Civil id</string>
    <string name="disability">Disability</string>
    <string name="residency">Residency</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="martial_status">Martial Status</string>
    <string name="job">Job</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="save">Save</string>
    <string name="organization_name">Organization Name</string>
    <string name="description">Description</string>
    <string name="list_of_members">List of members</string>
    <string name="add_member">Add member</string>
    <string name="status">Status</string>
    <string name="inactive">Inactive</string>
    <string name="active">Active</string>
    <string name="upload_id">Upload Id</string>
    <string name="add_organization_title">Add New Organization</string>
    <string name="all_fields_required_msg">All fields must be entered</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="list_of_access_id">List of Access Id</string>
    <string name="identification_card">Identification Card</string>
</resources>