<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_centerline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        android:src="@drawable/main_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/illustration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/smart_id_vector_illustration"
        app:layout_constraintTop_toBottomOf="@id/logo_image_view"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_centerline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/illustration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/login_with_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cornered_third_bg"
            android:drawableStart="@drawable/id_icon"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/login_with_id"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:drawableTint="@color/white" />

        <Button
            android:id="@+id/login_as_organization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/cornered_primary_bg"
            android:drawableStart="@drawable/organization_icon"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/login_as_organization"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:drawableTint="@color/white" />

        <Button
            android:id="@+id/login_as_civil_authority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/cornered_stroke_primary_bg"
            android:drawableStart="@drawable/admin_icon"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/civil_authority"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:drawableTint="@color/colorPrimary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>